--- a/rps/rps.css
+++ b/rps/rps.css
@@ -74,6 +74,8 @@ main {
 }
 
 .flex-cont {
+    font-weight: bold;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -110,4 +112,13 @@ header {
 header h1 {
     font-size: 2rem;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+#winner {
+    font-size: 2rem;
+    color: rgba(218, 218, 46, 0.616);
+}
+
+.calltoaction {
+    font-size: 2rem;
 }
